<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#283593"
                android:text="@string/death_metal"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#5c6bc0"
                android:padding="5dp"
                android:text="@string/death_metal_string"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/belakor" />

            <Button
                android:id="@+id/btn_video"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#5c6bc0"
                android:text="@string/song_listen"
                android:textAppearance="?android:textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#283593"
            android:text="@string/previous"
            android:textAppearance="?android:textAppearanceLarge" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#283593"
            android:text="@string/next"
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>
</LinearLayout>
